syntax = "proto2";

package magnolify.protobuf.v2;

option java_package = "magnolify.protobuf";

message Integers {
    required int32 i = 1;
    required int64 l = 2;
}

message Floats {
    required float f = 1;
    required double d = 2;
}

message Required {
    required bool b = 1;
    required string s = 2;
    required int32 i = 3;
}

message Nullable {
    optional bool b = 1;
    optional string s = 2;
    optional int32 i = 3;
}

message Repeated {
    repeated bool b = 1;
    repeated string s = 2;
    repeated int32 i = 3;
}

message Nested {
    required bool b = 1;
    required string s = 2;
    required int32 i = 3;
    required Required r = 4;
    optional Required o = 5;
    repeated Required l = 6;
}

message Collection {
    repeated int32 a = 1;
    repeated int32 l = 2;
    repeated int32 v = 3;
    repeated int32 s = 4;
}

message MoreCollection {
    repeated int32 i = 1;
    repeated int32 s = 2;
    repeated int32 is = 3;
}

enum UpperCaseColor {
    RED = 0;
    GREEN = 1;
    BLUE = 2;
}

enum CamelCaseColor {
    Red = 0;
    Green = 1;
    Blue = 2;
    Yellow = 3;
    Cyan = 4;
    Magenta = 5;
}

message Enums {
    required UpperCaseColor j = 1;
    required CamelCaseColor s = 2; // Enumeration
    required CamelCaseColor a = 3; // ADT
    optional UpperCaseColor jo = 4;
    optional CamelCaseColor so = 5; // Enumeration
    optional CamelCaseColor ao = 6; // ADT
    repeated UpperCaseColor jr = 7;
    repeated CamelCaseColor sr = 8; // Enumeration
    repeated CamelCaseColor ar = 9; // ADT
}

message UnsafeEnums {
    required string j = 1;
    required string s = 2;
    required string a = 3;
    optional string jo = 4;
    optional string so = 5;
    optional string ao = 6;
    repeated string jr = 7;
    repeated string sr = 8;
    repeated string ar = 9;
}

message Custom {
    required string u = 1;
    required int64 d = 2;
}

message Bytes {
    required bytes b = 1;
}

message DefaultRequired {
    required int32 i = 1 [default = 123];
    required int64 l = 2 [default = 456];
    required float f = 3 [default = 1.23];
    required double d = 4 [default = 4.56];
    required bool b = 5 [default = true];
    required string s = 6 [default = "abc"];
    required bytes bs = 7 [default = "def"];
    required UpperCaseColor je = 8 [default = GREEN];
    required CamelCaseColor se = 9 [default = Green]; // Enumeration
    required CamelCaseColor ae = 10 [default = Cyan]; // ADT
}

message DefaultNullable {
    optional int32 i = 1 [default = 123];
    optional int64 l = 2 [default = 456];
    optional float f = 3 [default = 1.23];
    optional double d = 4 [default = 4.56];
    optional bool b = 5 [default = true];
    optional string s = 6 [default = "abc"];
    optional bytes bs = 7 [default = "def"];
    optional UpperCaseColor je = 8 [default = GREEN];
    optional CamelCaseColor se = 9 [default = Green]; // Enumeration
    optional CamelCaseColor ae = 10 [default = Cyan]; // ADT
}
