syntax = "proto3";

package magnolify.protobuf.v3;

option java_package = "magnolify.protobuf";

message Integers {
    int32 i = 1;
    int64 l = 2;
}

message Floats {
    float f = 1;
    double d = 2;
}

message Required {
    bool b = 1;
    string s = 2;
    int32 i = 3;
}

message Nullable {
    optional bool b = 1;
    optional string s = 2;
    optional int32 i = 3;
}

message Repeated {
    repeated bool b = 1;
    repeated string s = 2;
    repeated int32 i = 3;
}

message Nested {
    bool b = 1;
    string s = 2;
    int32 i = 3;
    Required r = 4;
    optional Required o = 5;
    repeated Required l = 6;
}

message Collection {
    repeated int32 a = 1;
    repeated int32 l = 2;
    repeated int32 v = 3;
    repeated int32 s = 4;
}

message MoreCollection {
    repeated int32 i = 1;
    repeated int32 s = 2;
    repeated int32 is = 3;
}

enum UpperCaseColor {
    RED = 0;
    GREEN = 1;
    BLUE = 2;
}

enum CamelCaseColor {
    Red = 0;
    Green = 1;
    Blue = 2;
    Yellow = 3;
    Cyan = 4;
    Magenta = 5;
}

message Enums {
    UpperCaseColor j = 1;
    CamelCaseColor s = 2; // Enumeration
    CamelCaseColor a = 3; // ADT
    optional UpperCaseColor jo = 4;
    optional CamelCaseColor so = 5; // Enumeration
    optional CamelCaseColor ao = 6; // ADT
    repeated UpperCaseColor jr = 7;
    repeated CamelCaseColor sr = 8; // Enumeration
    repeated CamelCaseColor ar = 9; // ADT
}

message UnsafeEnums {
    string j = 1;
    string s = 2;
    string a = 3;
    optional string jo = 4;
    optional string so = 5;
    optional string ao = 6;
    repeated string jr = 7;
    repeated string sr = 8;
    repeated string ar = 9;
}

message Custom {
    string u = 1;
    int64 d = 2;
}

message Bytes {
    bytes b = 1;
}

message UpperCase {
    string FIRSTFIELD = 1;
    string SECONDFIELD = 2;
    UpperCaseInner INNERFIELD = 3;
}

message UpperCaseInner {
    string INNERFIRST = 1;
}
